@@ -4,6 +4,8 @@
 
 === 1.0.3 ===
 * Added german translations (contributed by Johannes Guenther).
+* Updated localization files.
+* Updated plugin window template.
 
 === 1.0.2 ===
 * Added support of JACK connection status indication.
